Fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+* {
+  max-width: 100%;
+}
+
 a {
   color: inherit;
   text-decoration: none;
